xfsprogs-2.8.XX
	- Fix xfs_quota gracetime reporting.
	  Thanks to Utako Kusaka <utako@tnes.nec.co.jp> for this.

xfsprogs-2.8.19 (31 January 2007)
	- Fix pthread stack size setting in xfs_repair.
	- Fix xfs_bmap -n option displaying a truncated extent.
	- Fix xfs_io mwrite segfault. Thanks to Utako Kusaka for these two
	  fixes.
	- Fix errors in xfs_quota(8) man page.

xfsprogs-2.8.18 (8 December 2006)
 	- <xfs/list.h> is an installed file, we cannot simply rename it,
 	  as other applications using it (accidentally or not) may break.
 	  The xfs_list.h name was inconsistent with everything else too.
 	- Fix "pointer targets in assignment differ in signedness" warnings
 	- Update Debian packaging.
	- Fix up two issues with xfs_db and bmap. If the data/attr fork is
	  local, it either infinite loops or crashes. If both are displayed,
	  the attrs are wrong.
	- Fix up xfs_io mmap read that read from the wrong offset.
	- Updated xfs_io man page.
	  Thanks to Utako Kusaka <utako@tnes.nec.co.jp> for the above three
	  fixes.

xfsprogs-2.8.17 (?)
	- Fix up libxfs SEGV when attempting to mount a non-XFS filesystem.
	  Thanks to Utako Kusaka <utako@tnes.nec.co.jp> for this.
	- Fix up xfs_repair aborting if it finds an inode with an invalid
	  inode type.
	- Fix up default realtime extent size for large block sizes.
	- Rename include/list.h to xfs_list.h so that other applications
	  do not accidentally use it.

xfsprogs-2.8.16 (30 October 2006)
	- Fix up an endian problem for nlink setting in phase 7 for xfs_repair.

xfsprogs-2.8.15 (19 October 2006)
	- Fix up nlink checks and repairs in phase 7 for xfs_repair.
	- Remove a bogus LEAFN warning for a single leaf node v2 dir.
	  Thanks to Roger Willcocks <roger@filmlight.ltd.uk> for this.

xfsprogs-2.8.14 (6 October 2006)
	- Fix up the ring command in xfs_db,
	  Thanks to Utako Kusaka <utako@tnes.nec.co.jp> for this.
	- Set the blocksize on the device to the given sector
	  size which is _not_ necessarily 512 bytes;